--- a/alumno.html
+++ b/alumno.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Alumno</title>
+  <title>Empleado</title>
   <script
     src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js">
     </script>
@@ -43,7 +43,7 @@
     </header>
     <p>
       <label>
-        Matricula
+        Clave
         <input name="matricula"
           type="text" required>
       </label>
@@ -64,14 +64,14 @@
     </p>
     <p>
       <label>
-        Grupo
+        Departamento
         <input name="grupo"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Fecha
+        Fecha Igreso
         <input name="fecha" type="date" required>
       </label>
     </p>
